    * New variable HAVE_INFO_MAP_FILE_NAME, used by HAVE_INFO_MAP_PATH, NEW_HAVE_INFO_MAP_PATH, SITE_HAVE_INFO_MAP_PATH.
    * Added time measurements to create urls
    * Sync command: When no files to sync created batch file will have one progress item: "Done Sync".
    * Sync command: When no dirs to create no prgress items will be created.

    user visible changes, admin:
    * Admin variable MAX_FILE_SIZE renamed MIN_FILE_SIZE_TO_WTAR.
    * New admin variable: WTAR_BY_FILE_SIZE_EXCLUDE_REGEX. Files names passing this regex will not be wtarred. This was done mainly to disable wtarring of instl itself when updating it.
    * Variable WTAR_REGEX split in to twp: FOLDER_WTAR_REGEX, FILE_WTAR_REGEX to allow separation between files and folders when choosing what to wtar.
    * repo rev file has new variable INDEX_URL_RELATIVE_PATH, for the convenience of the secure URL creating code.
    * improved the help for unwtar command
    * added --limit option to wtar command so it can work on specific folders.
    * fix-symlinks command will work even if there are broken symlinks. THere might point to inside folders that were wtared.

    programmer visible changes:
    * Separated instlClient to different files by command: insltClientCopy, instlClientRemove, instlClientSync, instlClientUninstall.
    * renamed translate_url to translate_url_parser in commandline options parsing.

15/2/2015 0.10.0.2
    user visible changes, admin:
    * removed --acl when uploading to S3.

    programmer visible changes:
    * Re-added missing line in upload code

15/2/2015 0.10.0.0
    user visible changes, client:
    * Support for S3 secure downloads.
    * New command translate_url for testing the creation of secure s3 urls.

    programmer visible changes:
    * Global variable var_stack is now imported as itself rather as var_list to avoid cross import problems.
    * ConnectionBase class and derived classes ConnectionHTTP and ConnectionS3 handle secure connection issues.
