@@ -52,7 +52,11 @@ class InstlInstanceSync(object):
         try:
             safe_makedirs(var_stack.resolve("$(LOCAL_REPO_BOOKKEEPING_DIR)", raise_on_fail=True))
             safe_makedirs(var_stack.resolve("$(LOCAL_REPO_REV_BOOKKEEPING_DIR)", raise_on_fail=True))
-            download_from_file_or_url(var_stack.resolve("$(INFO_MAP_FILE_URL)"),
+            if "FILES_AND_URLS_INFO_MAP_URL" in var_stack:
+                download_from_file_or_url(var_stack.resolve("$(FILES_AND_URLS_INFO_MAP_URL)"),
+                                      var_stack.resolve("$(LOCAL_COPY_OF_REMOTE_INFO_MAP_PATH)", raise_on_fail=True))
+            else:
+                download_from_file_or_url(var_stack.resolve("$(INFO_MAP_FILE_URL)"),
                                       var_stack.resolve("$(LOCAL_COPY_OF_REMOTE_INFO_MAP_PATH)", raise_on_fail=True),
                                       cache=True,
                                       public_key=var_stack.resolve("$(PUBLIC_KEY)"),
@@ -95,8 +99,11 @@ class InstlInstanceSync(object):
             have_item = self.have_map.get_item_at_path(need_item.full_path_parts())
             if have_item is None:  # not found in have map
                 self.have_map.new_item_at_path(need_item.full_path_parts(),
-                                               need_item.flags(), need_item.last_rev(),
-                                               need_item.checksum(), create_folders=True)
+                                               need_item.flags(),
+                                               need_item.last_rev(),
+                                               need_item.checksum(),
+                                               # no need to copy the url to the have_map
+                                               create_folders=True)
             else:  # found in have map
                 if have_item.last_rev() == need_item.last_rev():
                     need_item.user_data = False
